B2B-Inventory/force-app/main/default/objects/Inventory_Item__c/fields/Quantity_in_Meters__c.field-meta.xml
<CustomField>
    <fullName>Quantity_in_Meters__c</fullName>
    <label>Quantity in Meters</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>