B2B-Inventory/force-app/main/default/objects/Inventory_Item__c/fields/Restock_Threshold__c.field-meta.xml
<CustomField>
    <fullName>Restock_Threshold__c</fullName>
    <label>Restock Threshold</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>